@@ -227,6 +227,8 @@ change will be saved with the lyrics. For more complex karaoke setups,
 .B kateenc(1)
 should be used instead.
 When embedding lyrics, the default output file extention is ".oga".
+Note that adding lyrics to a stream will automatically enable Skeleton
+(see the \fB-k\fR option for more information about Skeleton).
 
 .IP "-Y language-string, --lyrics-language language-string"
 Sets the language for the corresponding lyrics file to
